<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="287dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        android:text="@string/confirmacion"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t2"
        android:layout_width="311dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="186dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2" />

    <TextView
        android:id="@+id/t7"
        android:layout_width="186dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t5" />

    <TextView
        android:id="@+id/t9"
        android:layout_width="186dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t7" />

    <TextView
        android:id="@+id/t11"
        android:layout_width="186dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t9" />

    <TextView
        android:id="@+id/t3"
        android:layout_width="181dp"
        android:layout_height="32dp"
        android:layout_marginTop="28dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2"
        tools:text="@string/Fecha" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/celular"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t3" />

    <TextView
        android:id="@+id/t8"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/Email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t6" />

    <TextView
        android:id="@+id/t10"
        android:layout_width="107dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:text="@string/des"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t8" />

    <Button
        android:id="@+id/button2"
        android:layout_width="235dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:text="@string/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t11" />

</androidx.constraintlayout.widget.ConstraintLayout>